[package]
name = "cetka-ebpf"
version = "0.1.0"
edition = "2018"

[dependencies]
aya-bpf = { git = "http://github.com/aya-rs/aya", branch = "main" }
cetka-common = { path = "../cetka-common" }

[[bin]]
name = "cetka"
path = "src/main.rs"

[profile.dev]
panic = "abort"
debug = 1
opt-level = 2
overflow-checks = false

[profile.release]
panic = "abort"

[workspace]
members = []
