[package]
name = "cetka"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.42"
aya = { version = "0.10.6", features = ["async_tokio"] }
bytes = "1"
cetka-common = { path = "../cetka-common", features = ["userspace"] }
ctrlc = "3.2"
log = "0.4"
simplelog = "0.11"
structopt = { version = "0.3" }
tokio = { version = "1.9.0", features = ["full"] }

[[bin]]
name = "cetka"
path = "src/main.rs"
